--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ div i {
   max-width: 500px;
   background-color: rgb(186, 127, 214);
   margin-top: 30px;
+  margin-bottom: 10px;
 }
 .enter-city {
   margin-top: 20px;
